# mh-tools

./: .gitignore  .gitmodules  .python-version  DESIGN.md  pyproject.toml
docs/: RESEARCH.md
docs/plans/: 2026-03-13-phase-1-3-core-logic-cli.md  2026-03-13-phase-4-tui.md  2026-03-13-phase-5-web.md
src/mh_tools/: __init__.py  database.py  main.py  models.py  schema.sql
src/mh_tools/providers/: markethunt.py  mhct.py  name_resolver.py
src/mh_tools/tools/: base.py  map_value.py
src/mh_tools/ui/: app.py
src/mh_tools/ui/screens/: analyser.py
src/mh_tools/ui/widgets/: chest_search.py  favorites.py
tests/: conftest.py  test_database.py  test_main.py  test_models.py
tests/providers/: test_markethunt.py  test_mhct.py  test_name_resolver.py
tests/tools/: test_map_value.py
tests/ui/: test_analyser.py  test_app.py  test_chest_search.py
web/: next.config.ts  package-lock.json  package.json
web/__tests__/lib/: storage.test.ts
web/__tests__/lib/analysis/: ev-calculator.test.ts
web/__tests__/lib/services/: markethunt-service.test.ts  mhct-service.test.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/chest-analyser/: page.tsx
web/src/app/convertibles-analyser/: page.tsx
web/src/components/chest-analyser/: ChestSearch.tsx  FavoritesList.tsx  ResultsTable.tsx  SummaryBar.tsx  WarningsPanel.tsx
web/src/components/convertibles-analyser/: ConvertibleSearch.tsx  FavoritesList.tsx  ResultsTable.tsx  SummaryBar.tsx  WarningsPanel.tsx
web/src/lib/: services.ts  storage.ts  themes.ts
web/src/types/: index.ts
(+10 files in other folders)
