[project]
name = "mh-tools"
version = "0.1.0"
description = "MouseHunt community tools - map value analyser and more"
readme = "README.md"
authors = [
    { name = "oscarqjh", email = "oscar.jh9@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.14.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "textual>=1.0",
]

[project.scripts]
mh-tools = "mh_tools.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mh_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.22",
]
